	  removed unused fields from struct asmop and struct _G

2008-02-17 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (AccRsh): cosmetic changes,
	  (shiftR1Left2ResultSigned,shiftR1Left2Result,shiftL1Left2Result,
	  genRightShiftLiteral): fixed to work with SFRs as result by
	  assigning only once to result,
	  removed a lot of unused/excluded code fragments
	
2008-02-17 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f88.h,
	* device/include/pic/pic16f886.h,
	* device/include/pic/pic16f887.h: added TRISA6 and TRISA7

2008-02-17 Borut Razem <borut.razem AT siol.net>

	* src/z80/peeph.def: applied patch
	  #1893626: Optimize tail calls on Z80, thanks to Philipp Krause
	* src/z80/gen.c, src/z80/peeph.def: applied patch
	  #1893510: Improve logical left shift on Z80, thanks to Philipp Krause

2008-02-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/aslink.dsp: removed SDK define
	* as/link/z80/clean.mk: brought in sync with other ports
	* as/link/z80/lklibr.c (SdccLib, fndsym): handle the dflag here too
	* as/hc08/Makefile.bcc,
	* as/mcs51/Makefile.bcc,
	* as/z80/Makefile.bcc: noice.c was moved to as/asxxsrc/
	* src/z80/main.c (_setValues): use the now capitalized -Z,
	  (z80_port, gbz80_port): generate debug information when asked

2008-02-16 Borut Razem <borut.razem AT siol.net>

	* as/z80/asmain.c, as/z80/asm.h, as/z80/asdata.c,
	  as/link/z80/lkmain.c, as/z80/as_gbz80.dsp, as/z80/as_z80.dsp,
	  as/z80/Makefile.in. as/z80/Makefile.bcc:
	  applied patch #1893393: patch for as-z80 and link-z80 to generate
	  cdb, thanks to Armin Diehl
	* as/*/asnoice.c, as/hc08/as_hc08.dsp, as/hc08/Makefile.in,
	  as/mcs51/asx8051.dsp, as/mcs51/Makefile.in:
	  asnoice.c moved to as/asxxsrc/asnoice.c
	* src/z80/peeph-gbz80.def: applied patch
	  #1880235: Z80 return peephole, thanks to Philipp Krause

2008-02-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/sdccman.lyx: bumped version to 2.7.5